[tool.poetry]
name = "breadunitbot"
version = "0.1.0"
description = "Telegram bot for calculating bread units (XE) in products"
authors = ["Samangelof"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.5.0"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
